@@ -45,6 +45,7 @@ class NGluingPerms;
 class NPacket;
 class NProgressManager;
 class NProgressMessage;
+class NTriangulation;
 
 /**
  * \addtogroup census Census of Triangulations
@@ -53,78 +54,25 @@ class NProgressMessage;
  */
 
 /**
- * Fills the given packet with all triangulations in the census with the
- * requested parameters.  Each triangulation in the census will appear as
- * a child of the given packet.
+ * A routine used to determine whether a particular triangulation should be
+ * included in a census.  Such routines are used by NCensus::formCensus().
  *
- * This routine will conduct a census of all valid triangulations containing a
- * given number
- * of tetrahedra.  All such triangulations are included in the census up
- * to combinatorial isomorphism; given any isomorphism class, exactly
- * one representative will appear in the census.
- * The census can also be restricted to only include triangulations
- * satisfying given extra conditions; see the parameter descriptions for
- * further details.
+ * The first parameter passed should be a triangulation currently under
+ * consideration.
+ * The second parameter may contain arbitrary data as passed to
+ * NCensus::formCensus().
  *
- * Only valid triangulations will be produced; see
- * NTriangulation::isValid() for further details.
- *
- * Note that this routine should only be used if the census
- * contains a small enough total number of triangulations to
- * avoid any memory disasters.
- *
- * If a progress manager is passed, the calculation will run in a new
- * thread and this routine will return immediately.
- *
- * \todo \featurelong Allow passing an arbitrary criterion function that
- * will determine if a triangulation is interesting enough to include in
- * a custom census.
- *
- * @param parent the packet beneath which members of the
- * census will be placed.
- * @param nTetrahedra the number of tetrahedra in each
- * triangulation in the census.
- * @param finiteness determines whether to include finite and/or ideal
- * triangulations.  The set should contain \c true if finite (non-ideal)
- * triangulations are to be included, and should contain \c false if
- * ideal triangulations are to be included.
- * @param orientability determines whether to include orientable
- * and/or non-orientable triangulations.  The set should contain \c true
- * if orientable triangulations are to be included, and should contain
- * \c false if non-orientable triangulations are to be included.
- * @param boundary determines whether to include triangulations with
- * and/or without boundary faces.  The set should contain \c true
- * if triangulations with boundary faces are to be included, and should contain
- * \c false if triangulations with only internal faces are to be included.
- * @param nBdryFaces specifies the precise number of boundary faces
- * that should be present in the triangulations produced.  If this parameter
- * is negative, it is ignored and no restriction is imposed.
- * If \a boundary does not contain \c true, this parameter is ignored.
- * If \a boundary contains \c true and this parameter is at least zero,
- * only triangulations with this many
- * boundary faces will be produced.  In particular, if this parameter is
- * positive then triangulations with only internal faces will not be produced,
- * irrespective of whether \c false is contained in \a boundary.
- * Note that, in order to produce any
- * triangulations at all, this parameter must be even and at most
- * 2<i>T</i>+2, where <i>T</i> is the number of tetrahedra requested.
- * @param manager a progress manager via which progess will be reported,
- * or 0 if no progress reporting is required.  If non-zero,
- * \a manager must point to a progress manager for which
- * NProgressManager::isStarted() is still \c false.
- * @return the number of triangulations produced in the census, or 0 if
- * a progress manager was passed.
+ * The return value should be \c true if the triangulation passed should
+ * be included in the census, or \c false otherwise.
  */
-unsigned long formCensus(NPacket* parent, unsigned nTetrahedra,
-    NBoolSet finiteness, NBoolSet orientability, NBoolSet boundary,
-    int nBdryFaces = -1, NProgressManager* manager = 0);
+typedef bool (*AcceptTriangulation)(NTriangulation*, void*);
 
 /**
- * A utility class used by formCensus().  Other routines should never
- * refer to this class directly.  It is used to store temporary
- * information when forming the census.
+ * A utility class used to form a complete census of 3-manifold
+ * triangulations satisfying certain constraints.
  *
- * \ifaces Not present.
+ * \ifaces Not present, although static routine formCensus() is available
+ * as a member of class Engine.
  */
 class NCensus {
     private:
@@ -135,13 +83,137 @@ class NCensus {
         NBoolSet orientability;
             /**< The argument passed to formCensus(). */
 
+        AcceptTriangulation sieve;
+            /**< The arbitrary constraint function to run triangulations
+                 through. */
+        void* sieveArgs;
+            /**< The second argument to pass to function \a sieve. */
+
         NProgressMessage* progress;
             /**< Reports the current state of progress of the census
-             *   generation.  This will be 0 if progress reporting is
-             *   not required. */
+                 generation.  This will be 0 if progress reporting is
+                 not required. */
 
         unsigned long whichSoln;
             /**< The number of the solution we are up to. */
+
+    public:
+        /**
+         * Fills the given packet with all triangulations in a census of
+         * 3-manifold triangulations satisfying the given constraints.
+         * Each triangulation in the census will appear as a child of the
+         * given packet.
+         *
+         * This routine will conduct a census of all valid triangulations
+         * containing a given number of tetrahedra.  All such triangulations
+         * are included in the census up to combinatorial isomorphism; given
+         * any isomorphism class, exactly one representative will appear in
+         * the census.
+         *
+         * The census can be optionally restricted to only include
+         * triangulations satisfying further constraints (such as
+         * orientability and finiteness); see the individual parameter
+         * descriptions for further details.  In particular, parameter
+         * \a sieve can be used to impose arbitrary restrictions that are
+         * not hard-coded into this class.
+         *
+         * Note that if constraints may be imposed using the hard-coded
+         * parameters (such as orientability and finiteness), it is
+         * generally better to do this than to use the arbitrary
+         * constraint parameter \a sieve.  Hard-coded parameters will be
+         * tested earlier, and some (such as orientability) can be
+         * incorporated directly into the census algorithm to give a vast
+         * performance increase.
+         *
+         * Only valid triangulations will be produced; see
+         * NTriangulation::isValid() for further details.
+         *
+         * Note that this routine should only be used if the census
+         * contains a small enough total number of triangulations to
+         * avoid any memory disasters.
+         *
+         * If a progress manager is passed, the calculation will run in a new
+         * thread and this routine will return immediately.  Otherwise
+         * the calculation will run in the current thread and this
+         * routine will only return once the census is complete.
+         *
+         * \ifaces This routine is a member of class Engine.
+         * Parameters \a sieve and \a sieveArgs are not present
+         * (and will be treated as \c null).
+         *
+         * @param parent the packet beneath which members of the census will
+         * be placed.
+         * @param nTetrahedra the number of tetrahedra in each triangulation
+         * in the census.
+         * @param finiteness determines whether to include finite and/or ideal
+         * triangulations.  The set should contain \c true if finite (non-ideal)
+         * triangulations are to be included, and should contain \c false if
+         * ideal triangulations are to be included.
+         * @param orientability determines whether to include orientable
+         * and/or non-orientable triangulations.  The set should contain \c true
+         * if orientable triangulations are to be included, and should contain
+         * \c false if non-orientable triangulations are to be included.
+         * @param boundary determines whether to include triangulations with
+         * and/or without boundary faces.  The set should contain \c true
+         * if triangulations with boundary faces are to be included, and
+         * should contain \c false if triangulations with only internal
+         * faces are to be included.
+         * @param nBdryFaces specifies the precise number of boundary faces
+         * that should be present in the triangulations produced.  If this
+         * parameter is negative, it is ignored and no additional restriction
+         * is imposed.  See the documentation for routine
+         * NFacePairing::findAllPairings() for details regarding this
+         * parameter and how it interacts with parameter \a boundary.
+         * @param manager a progress manager via which progess will be reported,
+         * or 0 if no progress reporting is required.  If non-zero,
+         * \a manager must point to a progress manager for which
+         * NProgressManager::isStarted() is still \c false.
+         * @param sieve an additional constraint function that may be
+         * used to exclude certain triangulations from the census.  If
+         * this parameter is non-zero, each triangulation produced (after
+         * passing all other criteria) will be passed through this
+         * function.  If this function returns \c true then the triangulation
+         * will be included in the census; otherwise it will not.
+         * When this function is called, the first (triangulation)
+         * argument will be a triangulation under consideration for
+         * inclusion in the census.  The second argument will be
+         * parameter \a sieveArgs as passed to formCensus().
+         * This parameter may be passed as \c null (in which case no
+         * additional constraint function will be used).
+         * @param sieveArgs the pointer to pass as the final parameter
+         * for the function \a sieve which will be called upon each
+         * triangulation found.  If \a sieve is \c null then \a sieveArgs
+         * will be ignored.
+         * @return the number of triangulations produced in the census, or 0 if
+         * a progress manager was passed.
+         */
+        static unsigned long formCensus(NPacket* parent, unsigned nTetrahedra,
+            NBoolSet finiteness, NBoolSet orientability, NBoolSet boundary,
+            int nBdryFaces = -1, AcceptTriangulation sieve = 0,
+            void* sieveArgs = 0, NProgressManager* manager = 0);
+
+        /**
+         * Determines whether the given triangulation even has a chance
+         * at being minimal.  This routine can be passed as parameter
+         * \a sieve to routine NCensus::formCensus() to exclude obviously
+         * non-minimal triangulations from a census.
+         *
+         * A variety of tests will be performed; these tests are subject
+         * to change between Regina releases.  Currently this routine
+         * counts vertices and also tries to simplify the triangulation using
+         * NTriangulation::intelligentSimplify().
+         *
+         * Currently this routine is only useful for triangulations whose
+         * faces are all internal; if the given triangulation has
+         * boundary faces then this routine will simply return \c true.
+         *
+         * @param tri the triangulation to examine.
+         * @param ignore a parameter that is ignored.
+         * @return \c false if the given triangulation is known to be
+         * non-minimal, or \c true if minimality of the given
+         * triangulation has not been determined.
+         */
+        static bool mightBeMinimal(NTriangulation* tri, void* ignore);
 
     private:
         /**
@@ -156,8 +228,8 @@ class NCensus {
          * required.
          */
         NCensus(NPacket* newParent, unsigned nTetrahedra,
-            const NBoolSet& newFiniteness,
-            const NBoolSet& newOrientability,
+            const NBoolSet& newFiniteness, const NBoolSet& newOrientability,
+            AcceptTriangulation newSieve, void* newSieveArgs,
             NProgressMessage* newProgress = 0);
 
         /**
@@ -184,10 +256,6 @@ class NCensus {
          * this must really be of class NCensus.
          */
         static void foundGluingPerms(const NGluingPerms* perms, void* census);
-
-    friend unsigned long formCensus(NPacket* parent, unsigned nTetrahedra,
-        NBoolSet finiteness, NBoolSet orientability, NBoolSet boundary,
-        int nBdryFaces, NProgressManager* manager);
 };
 
 /*@}*/
